language/move-lang/tests/move_check/parser/function_without_body.move
module M {
    // Non-native functions must specify the function body.
    fun fn();
}
